src/test/ui/binop/issue-24352.stderr
error[E0277]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |            ^ no implementation for `f64 - {integer}`
   |
   = help: the trait `Sub<{integer}>` is not implemented for `f64`

error[E0369]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |     ------ ^ - {integer}
   |     |
   |     f64

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
